Name:                cgroups
Version:             1.0.0
Synopsis:            Sample program written for Zalora.
License-file:        LICENSE
License:             MIT
Author:              John Wiegley
Maintainer:          johnw@newartisans.com
Build-Type:          Simple
Cabal-Version:       >=1.10
Category:            System
Description:
  Sample program written for Zalora.

-- Source-repository head
--   type: git
--   location: git://github.com/jwiegley/cgroups.git

Executable cgroups
    default-language:   Haskell98
    main-is: CGroups.hs
    ghc-options: -Wall
    build-depends:
        base                 >= 3 && < 5
      , aeson                == 0.7.*
      , network              == 2.4.*
      , scotty               == 0.7.*
      , wai                  == 2.1.*
      , wai-handler-fastcgi  == 2.0.*
      , text                 == 0.11.*
      , transformers         == 0.3.*
    default-extensions: 
        BangPatterns
        OverloadedStrings

test-suite test
    hs-source-dirs: test
    default-language: Haskell2010
    main-is: main.hs
    type: exitcode-stdio-1.0
    ghc-options: -Wall -threaded
    build-depends:
        base
      , cgroups
      , unix                 == 2.5.*
      , hspec                == 1.4.*
      , monad-logger         == 0.3.*
    default-extensions: 
        OverloadedStrings
