Name:          cgroups
Version:       1.0.0
Synopsis:      Sample program written for Zalora.
License-file:  LICENSE
License:       MIT
Author:        John Wiegley
Maintainer:    johnw@newartisans.com
Build-Type:    Simple
Cabal-Version: >=1.10
Category:      System

Description:
  Sample program written for Zalora.

Extra-source-files:
    default.nix
    fastcgi_params
    mime.types
    nginx.conf
    run.sh

Executable cgroups
    default-language: Haskell2010
    main-is:          CGroups.hs
    ghc-options:      -Wall

    build-depends:
        base                 >= 3 && < 5
      , aeson                == 0.7.*
      , conduit              == 1.1.*
      , conduit-combinators  == 0.2.*
      , http-types           == 0.8.*
      , network              == 2.4.*
      , scotty               == 0.7.*
      , system-fileio        == 0.3.*
      , system-filepath      == 0.4.*
      , text                 == 0.11.*
      , transformers         == 0.3.*
      , wai                  == 2.1.*
      , wai-handler-fastcgi  == 2.0.*

    default-extensions: 
        BangPatterns
        OverloadedStrings
